<resources>
    <string name="app_name">Cursos</string>
    <string name="usuario">Iniciar Sesion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nombre">Ingrese Nombre</string>
    <string name="ap_pat">Ingrese Apellido Paterno</string>
    <string name="ap_mat">Ingrese Apellido Materno</string>
    <string name="centro_uni">Ingrese Centro Universitario</string>
    <string name="Email">Ingrese Email</string>
    <string name="password">Ingrese Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="actualizar">Actualizar</string>
</resources>
