<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Datos"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/colorletras"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/ApPat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ap_pat"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/colorletras"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/ApMat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ap_mat"
                android:inputType="text"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorletras"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/centrouni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/centro_uni"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="25"
                android:singleLine="true"
                android:textColor="@color/colorletras"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/Emaildat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorletras"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="12"
                android:textColor="@color/colorletras"/>

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:textColor="@color/colorletras"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"/>


    </LinearLayout>


</ScrollView>


</LinearLayout>